# AFA-Benchmark

./: .gitignore  .pre-commit-config.yaml  EXAMPLE_JOB_ARRAY.sh  README.md  Snakefile  Snakefile.master  dataset_descriptions.txt  hydra.conf  justfile  proposal.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  simple_torch_test.py  test_torch_bundle_simple.py
.copier/: uv-template-answers.yml
afabench/: __init__.py
afabench/afa_discriminative/: afa_methods.py  datasets.py  models.py  utils.py
afabench/afa_generative/: afa_methods.py  datasets.py  models.py  utils.py
afabench/afa_oracle/: __init__.py  aaco_core.py  afa_methods.py  classifiers.py  mask_generator.py
afabench/afa_rl/: afa_env.py  afa_methods.py  agents.py  callbacks.py  custom_types.py  datasets.py  reward_functions.py  utils.py
afabench/common/: afa_initializers.py  afa_methods.py  afa_uncoverings.py  afa_unmaskers.py  artifact_storage.py  bundle.py  classifiers.py  config_classes.py  custom_types.py  datasets.py  models.py  registry.py  torch_bundle.py  utils.py
afabench/eval/: eval.py  hard_budget.py  soft_budget.py  utils.py
afabench/static/: models.py  static_methods.py  utils.py
cfg/: pretrain.yaml
cfg/method/: shim2018.yaml
cfg/pretrain/: old_shim.yaml
checkpoints/afa_rl/: pretrain_shim2018.ckpt  shim2018.pth  shim_embedder_classifier.ckpt  shim_q_agent.pth
conf/dataset_generation/: config.yaml  tmp.yaml
conf/eval/: config.yaml  list.yaml  tmp.yaml
conf/misc/: calculate_evaluation_time.yaml  calculate_training_time.yaml  download_plot_results.yaml
conf/plot/: config.yaml  tmp.yaml
conf/soft_eval/: config.yaml
configs/: budgets.yml
configs/afa_generative/: Config_SGHMC_PNP_UCI0.yaml
configs/afa_rl/: pretrain_shim2018.yml  pretrain_zannone2019.yml  pretrain_zannone2019_cube.yml  pretrain_zannone2019_mnist.yml  train_shim2018.yml  train_zannone2019.yml
configs/classifiers/: pipeline.yml  train_nnclassifier.yml
configs/common/: train_masked_mlp_classifier.yml
configs/covert2023/: pipeline.yml  pretrain_covert2023.yml  train_covert2023.yml
configs/gadgil2023/: pipeline.yml  pretrain_gadgil2023.yml  train_gadgil2023.yml
configs/ma2018/: pipeline.yml  pretrain_ma2018.yml  train_ma2018.yml
configs/shim2018/: pipeline.yml  pretrain_shim2018.yml  slurm.yml  train_shim2018.yml
configs/zannone2019/: pretrain_zannone2019.yml  train_zannone2019.yml
data/cube/: cube_train_100.pt  cube_val_100.pt
data_old/cube/: cube_train_1000.pt  cube_train_10000.pt  cube_val_1000.pt
debug/soft_budget/: generate_mock_evaluation_data.py  notebook.R  notebook.py  produce_soft_budget_plots.R
docs/: bundle_format.md  dataframe_formats.md  domain_model.puml  evaluation_data_format.md  limitations.md  metrics.md  slurm_training.md  yaml_files.md
docs/datasets/: dataset_generation.md  dataset_representation.md  dataset_types.md
models/afa_rl/: sequential_dummy-cube_train_10000.pt
notebooks/afa_rl/: pretrain_shim_embedder_and_classifier.ipynb  sandbox.ipynb  shim_agent.ipynb
notebooks/datasets/: dataset_loading.ipynb  datasets.ipynb  physionet_preprocessing.ipynb  synthetic_data_testing.ipynb  test_split_1.pt
scripts/: generate_dataset.py
scripts/SLURM/: train_AACO.sh  train_ACO.slurm  train_aaco_single.sh
scripts/data_generation/: generate_dataset.py
scripts/dataset_generation/: generate_dataset.py  generate_image_dataset.py
scripts/debugging/: debug_zannone2019.py
scripts/dev/: sync_excludes.py
scripts/eval/: eval_afa_method.py  eval_afa_method_old.py  eval_soft_afa_method.py
scripts/evaluation/: eval_afa_method.bash  eval_afa_method.py  eval_afa_method_mprocs.yaml  eval_soft_afa_method.py
scripts/misc/: add_dataset_split_col.R  calculate_evaluation_time.py  calculate_training_time.py  combine_soft_budget_results.R  download_result_plots.py  transform_eval_data.py
scripts/pipeline/: README_example.fish  evaluate.py  generate_data.fish  pretrain.py  train.py  train_classifier.py
scripts/pipelines/: README_example.bash  README_example.fish  README_randomdummy_example.fish  README_shim2018_example.fish  evaluate.fish  evaluate.py  example.bash  example.sh  generate_data.fish  plot.fish  plot.py  pretrain.py  train.py  train_classifier.fish
scripts/plotting/: plot.R  plot_eval.R  plot_results.py  produce_soft_budget_plots.R
scripts/pretrain/: covert2023.py  covert2023_image.py  gadgil2023.py  gadgil2023_image.py  kachuee2019.py  shim2018.py  zannone2019.py
scripts/pretrain_methods/: pretrain_shim2018.py
scripts/pretrain_models/: pretrain_covert2023.py  pretrain_covert2023_image.py  pretrain_gadgil2023.py  pretrain_gadgil2023_image.py  pretrain_kachuee2019.py  pretrain_ma2018.py  pretrain_shim2018.py  pretrain_zannone2019.py
scripts/train/: aaco.py  cae.py  covert2023.py  covert2023_image.py  gadgil2023.py  gadgil2023_image.py  kachuee2019.py  ma2018.py  masked_mlp_classifier.py  masked_vit_classifier.py  optimalcube.py  permutation.py  random_dummy.py  randomdummy.py  sequential_dummy.py  sequentialdummy.py  shim2018.py  zannone2019.py
scripts/train_classifiers/: train_masked_mlp_classifier.py  train_masked_vit_classifier.py  train_xgboost_classifier.py
scripts/train_methods/: aaco.py  train_aaco.py  train_aco.py  train_aco_simple.py  train_cae.py  train_covert2023.py  train_covert2023_image.py  train_gadgil2023.py  train_gadgil2023_image.py  train_kachuee2019.py  train_ma2018.py  train_optimalcube.py  train_permutation.py  train_randomdummy.py  train_sequentialdummy.py  train_shim2018.py  train_zannone2019.py
src/: aco_baseline.py
src/afa_discriminative/: datasets.py  (+3 more)
sweeps/: kachuee2019_costs.yaml  shim2018_costs.yaml  train_kachuee2019_MNIST.yaml  train_kachuee2019_cube.yaml  zannone2019_costs.yaml
tests/: test_early_stopping_eval.py
workflow/: Snakefile  Snakefile_han
(+906 files in other folders)
