[project]
name = "afa-rl"
version = "0.3.0"
requires-python = "==3.13.2"
dependencies = [
    "jaxtyping>=0.3.0",
    "lightning>=2.5.1",
    "pytest>=8.3.5",
    "torchrl>=0.7.2",
    "wandb>=0.19.8",
    "pandas>=1.5.2",
    "torchvision>=0.21.0",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["F722", "F821"]
