[project]
name = "afa-benchmark"
version = "0.3.2"
description = "A benchmark of active feature acquisition (AFA) methods."
readme = "README.md"
authors = [
    { name = "Valter Schutz", email = "valterschutz@proton.me" },
    { name = "Han Wu", email = "hanwu@chalmers.se" }
]
requires-python = ">=3.10"
dependencies = [
    "coolname>=2.2.0",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.3.2",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torchrl>=0.8.0",
    "torchvision>=0.22.0",
    "wandb>=0.19.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/afa_rl"]

[dependency-groups]
dev = [
    "ipython>=8.36.0",
    "ruff>=0.11.8",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.mypy]
follow_untyped_imports = true
# strict = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade, enforce newer python conventions
  "ANN", # flake8-annotations, similar to mypy
  "B", # flake8-bugbear, find likely bugs
  "Q", # flake8-quotes, use quotes correctly
  "C90", # mccabe for complexity checking
  "NPY", # some numpy specific rules
  "PD", # opinionated pandas
  "N", # pep8-naming, follow PEP naming conventions
  "PERF", # perflint, catch performance anti-patterns
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "D", # pydocstyle, follow docstring conventions
  "PL", # pylint, check code for errors
  "FURB", # refurb, modern Python
  "RUF", # ruff-specific rules
  "TRY", # tryceratops, linting for exception handling
]
ignore = [
    "D105", # Missing docstring in magic method
    "D213", # multi-line-summary-second-line
    "D107", # Missing docstring in `__init__`"
    "D102", # Missing docstring in public method
    "D101", # Missing docstring in public class
    "D211", # no-blank-line-before-class
    "D203", # incorrect-blank-line-before-class
    "PLR2004", # Magic value used in comparison, useful in tests
    "ANN204", # Missing return type annotation for special method `__init__`
    "TRY003", # Avoid specifying long messages outside the exception class
    "D100", # Missing docstring in public module
    "PLR0911", # Too many return statements
    "D103", # Missing docstring in public function
    "RUF009", # Do not perform function call `unserializable` in dataclass defaults
    "PLR0913", # Too many arguments in function definition
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
    "D104", # Missing docstring in public package
    "N812",
    # Recommended to ignore according to https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191", # tab-indentation
    "E111", # indentation-with-invalid-multiple
    "E114", # indentation-with-invalid-multiple-comment
    "E117", # over-indented
    "D206", # docstring-tab-indentation
    "D300", # triple-single-quotes
    "Q000", # bad-quotes-inline-string
    "Q001", # bad-quotes-multiline-string
    "Q002", # bad-quotes-docstring
    "Q003", # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC002", # multi-line-implicit-string-concatenation if used without ISC001 and flake8-implicit-str-concat.allow-multiline = false
    "E501", # line-too-long, ruff format does not guarantee correct line length
]
